src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__case_without_condition.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected Literal but found :
  ┌─ <internal>:4:21
  │
4 │                     : x := 3;
  │                     ^ Unexpected token: expected Literal but found :
